# python-formatter

./: .coveragerc  .gitignore  .travis.yml  README.rst  coverage.rc  pytest.ini  setup.cfg  setup.py  tokenize.py  tox.ini
docs/: conf.py  formatter.rst  formatter2.rst  index.rst  modules.rst
docs/doctrees/: formatter.doctree  formatter2.doctree  index.doctree  modules.doctree  usage.doctree
formatter/: __init__.py  formatter.py  main.py  offsets.py  tokens.py  types.py
formatter2/: __init__.py  _stringio.py  formatter.py  main.py  offsets.py  tokenize_fork.py  tokens.py  types.py
tests/: base_test.py  requirements.txt  test_brace.py  test_commandline.py  test_comment.py  test_formatter.py  test_lists.py  test_operators.py  test_paren.py  test_stdin.py  test_string.py  test_ternary.py  test_tokens.py  test_types.py
tests/samples/: comments.py  continuations.py  dictionaries.py  generators.py  if_statements.py
