[metadata]
description-file = README.rst

[nosetests]
verbosity=3
with-doctest=1
detailed-errors=1
debug=nose.loader
#pdb=1
#pdb-failures=1
with-coverage=1
cover-package=formatter2
cover-branches=1
cover-min-percentage=100

#pdb=1
#pdb-failures=1

with-tissue=1
tissue-ignore=W391
tissue-package=formatter2


[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

